assets/css/perso.css
img {
  height: auto;
}

main p {
  text-align: justify;
}

#LNA {
  font-size: 1.3em !important;
}

.alt .content {
    font-size: 0.8em;
    flex: 1 1 auto;
    max-width: none;
    
}

@media screen and (max-width: 980px) {
.alt .content p {
	font-size: 1.1em;
}
}



.alt .spotlight {
    justify-content: space-between;
}

.alt a {
    margin-bottom: 10px;
}
.center-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.video-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px;
	height: 0;
	overflow: hidden;
}

.video-container iframe,  
.video-container object,  
.video-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#FSF {
	max-width: 300px;
	padding-bottom: 2em;
}

#main .wrapper.style5 h1 {
	color: rgb(255, 82, 51);
	text-align: center;
	font-size: 1.5em;
}

#contact {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

#contact .snip1559 {
  position: relative;
  display: inline-block;
  overflow: hidden;
  margin: 8px;
  min-width: 250px;
  max-width: 410px;
  width: 100%;
  background-color: rgb(227, 241, 255);
  color: #2B2B2B;
  text-align: center;
  font-size: 16px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

#contact .snip1559 * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

#contact .snip1559 .profile-image {
  padding: 15% 10% 0;
}

#contact .snip1559 .profile-image img {
  max-width: 100%;
  vertical-align: top;
  position: relative;
  border-radius: 50%;
  max-width: 40%;
}

#contact .snip1559 figcaption {
  padding: 5% 10% 15%;
}

#contact .snip1559 h3 {
  text-transform: uppercase;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  margin: 3px 0;
  color: coral;
}

#contact .snip1559 h5 {
  font-weight: 400;
  margin: 0;
  text-transform: uppercase;
  color: coral;;
  letter-spacing: 1px;
  padding-bottom: 1em;
}

#contact .snip1559 .phone {
	font-weight: 700;
	font-size: 1.2em;
}

#contact .snip1559 .icons i {
  color: #999;
  display: inline-block;
  margin-right: 5px;
  font-size: 1.5em;
}

#contact .snip1559 .icons i:hover {
  color: #555;
}

#contact .snip1559 .icons i a {
  text-decoration: none;
}

.mail {
	font-size: 1.6em;
	font-family: Courier, monospace !important;
}

